Fixed a UI bug caused by small spacing between datetime and the battery indicator

--- a/resources/styles.css
+++ b/resources/styles.css
@@ -5,23 +5,23 @@
 
 /*noinspection ALL*/
 .datetime {
-    x: 11%+2;
+    x: 22%+3;
     y: 9%;
 }
 
 /*noinspection ALL*/
 #timeElem {
     font-size: 74;
-    text-anchor: end;
-    x: 54%;
+    text-anchor: start;
+    x: 0%;
     y: 18%;
 }
 
 /*noinspection ALL*/
 #dateElem {
     font-size: 22;
-    text-anchor: end;
-    x: 52%;
+    text-anchor: start;
+    x: 0%;
     y: 0%;
 }
 
@@ -143,33 +143,8 @@
 }
 
 /*noinspection ALL*/
-#steps {
-    x: 66%;
-    y: 60%;
-    width: 13%;
-    height: 20%;
-    fill: deepskyblue;
-}
-
-/*noinspection ALL*/
-#stepsImage {
-    x: 68%+1;
-    y: 82%;
-    width: 25;
-    height: 30;
-}
-
-/*noinspection ALL*/
-#stepsText {
-    x: 72%+2;
-    y: 32%;
-    font-size: 15;
-    text-anchor: middle;
-}
-
-/*noinspection ALL*/
 #distance {
-    x: 81%;
+    x: 66%;
     y: 60%;
     width: 13%;
     height: 20%;
@@ -178,7 +153,7 @@
 
 /*noinspection ALL*/
 #distanceImage {
-    x: 83%+1;
+    x: 68%+1;
     y: 82%;
     width: 25;
     height: 30;
@@ -186,6 +161,31 @@
 
 /*noinspection ALL*/
 #distanceText {
+    x: 72%+2;
+    y: 32%;
+    font-size: 15;
+    text-anchor: middle;
+}
+
+/*noinspection ALL*/
+#steps {
+    x: 81%;
+    y: 60%;
+    width: 13%;
+    height: 20%;
+    fill: deepskyblue;
+}
+
+/*noinspection ALL*/
+#stepsImage {
+    x: 83%+1;
+    y: 82%;
+    width: 25;
+    height: 30;
+}
+
+/*noinspection ALL*/
+#stepsText {
     x: 87%;
     y: 32%;
     font-size: 15;
@@ -204,7 +204,7 @@
 
 /*noinspection ALL*/
 .batterySection {
-    x: 7%;
+    x: 9%;
     y: 12%;
 }
 
